Fixed logo sizing on small phones

--- a/less/agency.less
+++ b/less/agency.less
@@ -232,7 +232,18 @@ header {
             padding-bottom: 4em;
             
             .header-logo-overlay img {
-                margin-bottom: 2em;
+                margin: 4em 0 2em;
+            }
+        }
+    }
+}
+
+@media(max-width: 450px) {
+    header {
+        .intro-text .header-logo-overlay {
+            img {
+                width: 100%;
+                margin: -0.5em 0 1em;
             }
         }
     }
